2001-09-13  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>

	* term/post.trm: Replace code like "if (float f)" at
	least by a still questionable boolean expression

2001-09-11  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>

	* term/gif.trm: Fix a C++ comment. We are still using C89!

2001-09-05  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>

	* term/epslatex.trm term/svg.trm: Two no-op changes to
	make gcc happy and remove (bogus) compiler warnings

2001-09-08 Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc src/gp_types.h src/graphics.c src/save.c
	src/show.c src/tables.c term/post.trm NEWS: Implemented plotting
	of filled curves for terminals supporting pm3d --- req. termentry
	filled_polygon(). Syntax:
	     set style [data | function] filledcurves [options]
	     plot ... with filledcurves [options]
	Options are not yet implemented -- this is let as a homework
	for somebody else.

	* term/x11.trm: Don't crash on X11_ipc overflow when "too many"
	vertices passed into X11_filled_polygon(). This should be properly 
	fixed by an X11 programmer according to the hint therein.

2001-09-07 Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c: Use %g format instead of %f when placing labels by
	mouse.

2001-09-06 Petr Mikulik  <mikulik@physics.muni.cz>

	* src/internal.c: matherr(exception) unsupported by mingw compiler.

2001-09-05  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>

	* .cvsignore docs/.cvsignore: Add entries

2001-09-05  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>

	* src/Makefile.am tutorial/Makefile.am: fixes to make
	automake 1.5 happy. Should work as well with automake 1.4

2001-09-04  James R. Van Zandt  <jrv@vanzandt.mv.com>

	* src/util.c (int_error et al.): Optionally print bad line from
	data file. 

	* src/datafile.c: Export filename of data file and pointer to
	current line, for error and warning messages.

	* src/time.c (gstrptime): Before syntax errors and warnings, ask
	for bad data string to be printed.
